# 3d-prints

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: pr.yml  release.yml
esp-screen-case/: pyproject.toml
esp-screen-case/src/esp_screen_case/: __init__.py  cadlib.py  case.py  dimensions.py  hello_world.py  tolerance_test.py  wall_bracket.py
esp-screen-case/tests/: capture_case_golden.py  capture_tolerance_golden.py  capture_wall_bracket_golden.py  conftest.py  geometry_helpers.py  test_case.py  test_case_geometry.py  test_hello_world.py  test_tolerance_test.py  test_tolerance_test_geometry.py  test_wall_bracket.py  test_wall_bracket_geometry.py
scripts/: build.py
