[project]
name = "3d-prints"
version = "0.0.0"
description = "Parametric 3D-printed parts — monorepo"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["esp-screen-case"]

[tool.pytest.ini_options]
testpaths = ["esp-screen-case/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
