[project]
name = "3d-prints"
version = "0.0.0"
description = "Parametric 3D-printed parts — monorepo"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "esp-screen-case",
    "pytest>=8.0",
    "trimesh>=4.0",
    "rtree>=1.0",
]

[tool.uv.workspace]
members = ["esp-screen-case"]

[tool.uv.sources]
esp-screen-case = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["esp-screen-case/tests"]
