[project]
name = "esp-screen-case"
version = "0.1.0"
description = "Parametric 3D-printed cases for Elecrow CrowPanel displays"
requires-python = ">=3.12"
dependencies = [
    "build123d>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "trimesh>=4.0",
    "rtree>=1.0",  # required by trimesh.contains() point-in-mesh tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
